java 17 support (#284)
* java 17 support
* update TileDb to support ubuntu lunar
* explicitly add java version for release.yml, default was 8
* changes to enable build on centos6 and 7 with java 17