@@ -56,23 +56,23 @@
   </distributionManagement>
 
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
     <scala.main>2.12</scala.main>
     <spark.version>3.0.1</spark.version>
     <spark.core.artifactid>spark-core_${scala.main}</spark.core.artifactid>
     <spark.sql.artifactid>spark-sql_${scala.main}</spark.sql.artifactid>
     <spark.exclude.packages>org.genomicsdb.spark.v2</spark.exclude.packages>
     <spark.exclude.files>**/org/genomicsdb/spark/v2/**.java</spark.exclude.files>
-    <htsjdk.version>3.0.1</htsjdk.version>
+    <htsjdk.version>3.0.5</htsjdk.version>
     <json.simple.version>[1.1.1,)</json.simple.version>
-    <gson.version>[2.8.9,)</gson.version>
-    <log4j.version>[2.17.0,)</log4j.version>
+    <gson.version>[2.10.1,)</gson.version>
+    <log4j.version>[2.20.0,)</log4j.version>
     <!-- Sync the protobuf.version with GENOMICSDB_PROTOBUF_VERSION in CMakeLists.txt -->
     <protobuf.version>3.21.7</protobuf.version>
     <google_shade_version>org.genomicsdb.shaded.com.google</google_shade_version>
-    <testng.version>6.10</testng.version>
+    <testng.version>7.7.1</testng.version>
     <gnu.getopt.version>1.0.13</gnu.getopt.version>
-    <surefire.plugin.version>2.22.2</surefire.plugin.version>
+    <surefire.plugin.version>3.0.0</surefire.plugin.version>
     <genomicsdb_source_directory>.</genomicsdb_source_directory>
     <genomicsdb_lib_directory>${genomicsdb_build_directory}/src/main</genomicsdb_lib_directory>
     <genomicsdb_build_directory>${project.basedir}/build</genomicsdb_build_directory>
@@ -374,7 +374,6 @@
             <include>**/*.scala</include>
           </includes>
           <reuseForks>true</reuseForks>
-          <parallel>all</parallel>
           <useUnlimitedThreads>true</useUnlimitedThreads>
           <argLine>${surefireJacoco} ${surefireArgLine}</argLine>
           <systemPropertyVariables>
@@ -507,7 +506,6 @@
       <id>java11</id>
       <properties>
         <java.version>11</java.version>
-        <surefireArgLine>--illegal-access=permit -Djava.library.path=${project.basedir}/bin:${java.library.path}</surefireArgLine>
       </properties>
       </profile>  
   </profiles>
